# Vector-Vibe

./: .env  .gitignore  README.md  config_reader.py  main.py  pyproject.toml  yandex.py
callbacks/: user_cb.py
handlers/: __init__.py  cmds.py
keyboards/: builders.py
orm/: db.py
