[project]
name = "Vector-vibe"
version = "1.0.0"
description = "match with friends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.19.0",
    "asyncpg>=0.30.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "mutagen>=1.47.0",
    "psycopg>=3.2.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "tqdm>=4.67.1",
    "yandex-music>=2.2.0",
]
